# websvr

./: .env  Cargo.toml  README.md  flake.nix  temp_counter.rs
plans/: media-server-ui-implementation.md
public/pages/: home.css
public/typography/: base.css  colors-dark.css  colors-light.css  component.css
src/: main.rs
src/components/: body.rs  footer.rs  header.rs  mod.rs
src/components/layout/: body.rs  header.rs  mod.rs  sidebar.rs
src/pages/: home.rs
src/route/: router.rs
src/util/: apply_patch.rs  component.rs  component_patcher.rs  datastar.rs  into_html_response.rs  mod.rs  patcher.rs  public_service.rs
